10월 2일 11:52 데모버전 완성